@@ -11,7 +11,9 @@ NEW FEATURES
       using log2-ratio and B-allele frequencies
     o min.target.width and small.targets in preprocessIntervals to 
       automatically deal with too small targets  
-    o calculate confidence intervals for cellular fractions  
+    o calculate confidence intervals for cellular fractions
+    o throw additional warning when sample is flagged as NON-ABERRANT and 
+      pick the diploid solution with lowest purity as best 
  
 SIGNIFICANT USER-VISIBLE CHANGES
 
